--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,9 @@
 body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
-	background: var(--light-color);
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
 	/* margin: 20px; */
 }
 
@@ -72,7 +74,7 @@ a {
 
 .btn:hover {
 	color: white;
-	background: var(--slate-color);
+	background: transparent;
 }
 
 /* Chat Page */
@@ -87,7 +89,7 @@ a {
 }
 
 .chat-header {
-	background: var(--coffee-color);
+	background: #282828;
 	color: white;
 	/* border-top-left-radius: 5px;
 	border-top-right-radius: 5px; */
@@ -99,12 +101,60 @@ a {
 
 .chat-main {
 	display: grid;
-	grid-template-columns: 1fr 3fr;
+	grid-template-columns: 1fr 4.5fr;
+}
+
+#emoji-content {
+	background-color: white;
+	grid-gap: 5px;
+	grid-template-columns: 35px 35px 35px 35px 35px 35px 35px 35px;
+	grid-auto-rows: 35px;
+	grid-auto-flow: row;
+	position: absolute;
+	left : 23px;
+	top: 480px;
+	display: none;
+	width: 350px;
+	padding: 10px;
+	border-radius: 5px;
+	animation-name: fadeUp;
+	animation-duration: .3s;
+	animation-fill-mode: forwards;
+	border: 4px solid var(--slate-color);
+	overflow-y: auto;
+	overflow-x: hidden;
+	max-height: 165px;
+	cursor: pointer;
+}
+
+#emoji-content span {
+	font-size: 23px;
+	text-align: center;
+	border-radius: 5px;
+}
+
+#emoji-content span:hover {
+	background-color: var(--slate-color);
+}
+
+@keyframes fadeUp {
+	from {
+		top: 450px;
+		opacity: 0;
+	}
+	to {
+		top : 480px;
+		opacity: 1;
+	}
+}
+
+.right {
+	justify-content: flex-end;
 }
 
 .chat-sidebar {
-	background: var(--latte-color);
-	color: white;
+	background: white;
+	color: var(--slate-color);
 	padding: 20px 20px 60px;
 	overflow-y: auto;
 }
@@ -125,21 +175,46 @@ a {
 }
 
 .chat-messages {
-	padding: 30px;
-	height: 80vh;
+	padding: 25px;
+	height: 77vh;
 	overflow-y: scroll;
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+.line-message {
+	display: flex;
+	width: 100%;
+	margin: 20px 0;
+	height: max-content;
 }
 
 .chat-messages .message {
 	padding: 20px 10px;
-	margin-bottom: 15px;
-	background-color: var(--slate-color);
+	margin: 0;
+	background-color: transparent;
 	border-radius: 5px;
 	animation-name: fadeUp;
 	animation-duration: .3s;
 	animation-delay: 0s;
 	color: white;
 	border: 3px solid white;
+	height: max-content;
+	width: max-content;
+	max-width: 500px;
 }
 
 .chat-messages .message .meta {
@@ -155,8 +230,8 @@ a {
 }
 
 .chat-form-container {
-	padding: 20px 30px;
-	background-color: var(--coffee-color);
+	padding: 25px;
+	background-color: #282828;
 }
 
 .chat-form-container form {
@@ -165,7 +240,7 @@ a {
 
 .chat-form-container input[type='text'] {
 	font-size: 16px;
-	padding: 20px !important;
+	padding: 25px 25px 25px 15px !important;
 	height: 40px;
 	flex: 1;
 	outline-width: 0;
@@ -175,19 +250,26 @@ a {
 }
 
 .chat-form-container .btn-sent {
-	transform: translateX(-30px);
+	transform: translateX(10px);
 	border: none !important;
 	padding: 0 20px;
 	background: white;
-	border-radius: 0 20px 20px 0;
+	border-radius: 20px;
 	cursor: pointer;
 	transition-duration: .2s;
 	color: var(--slate-color);
 }
 
-.chat-form-container .btn-sent:hover,
-#msg:focus ~ .btn-sent {
-	background: var(--slate-color);
+#icon-btn {
+	padding: 15px 20px;
+}
+
+.chat-form-container .btn-sent i {
+	transform: translateX(-1px);
+}
+
+.chat-form-container .btn-sent:hover {
+	background: transparent;
 	color: white;
 }
 
