--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,10 +48,12 @@
 body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-	/* margin: 20px; */
+	/* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);  */
+	background-size: cover;
+	background-position: center;
+	/* animation: gradient 15s ease infinite; */
+	background-image : url("../assets/space-background.jpg");
+	background-repeat: no-repeat;
 }
 
 ul {
@@ -80,12 +82,11 @@ a {
 /* Chat Page */
 
 .chat-container {
-	background: var(--slate-color);
+	background: transparent;
 	/* margin: 50px auto; */
 	overflow: hidden;
-	/* border-radius: 5px; */
-	height: 100vh;
-	width: 100vw;
+	border-radius: 10px;
+	margin: 70px 250px;
 }
 
 .chat-header {
@@ -104,7 +105,7 @@ a {
 
 .chat-main {
 	display: grid;
-	grid-template-columns: 1fr 4.5fr;
+	grid-template-columns: 1fr 3.5fr;
 	height: 80%;
 	width: 100%;
 }
@@ -112,14 +113,14 @@ a {
 #emoji-content {
 	background-color: white;
 	grid-gap: 5px;
-	grid-template-columns: 35px 35px 35px 35px 35px 35px 35px 35px;
-	grid-auto-rows: 35px;
+	grid-template-columns: repeat(5, 30px);
+	grid-auto-rows: 30px;
 	grid-auto-flow: row;
 	position: absolute;
-	left : 23px;
-	top: 480px;
+	left : 270px;
+	top: 410px;
 	display: none;
-	width: 350px;
+	width: max-content;
 	padding: 10px;
 	border-radius: 5px;
 	animation-name: fadeUp;
@@ -133,7 +134,7 @@ a {
 }
 
 #emoji-content span {
-	font-size: 23px;
+	font-size: 16px;
 	text-align: center;
 	border-radius: 5px;
 }
@@ -201,11 +202,9 @@ a {
 
 .chat-messages {
 	padding: 25px;
-	height: 100%;
+	height: 430px;
 	overflow-y: scroll;
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
+	background: transparent;
 }
 
 @keyframes gradient {
@@ -307,23 +306,26 @@ a {
 /* Join Page */
 .join-container {
 	max-width: 500px;
-	margin: 80px auto;
-	color: #484848;
-	border: 3px solid black;
+	margin: 100px auto;
+	color: white;
+	border: 1px solid #dde1e7;
 	border-radius: .5rem;
+	background: transparent;
+	backdrop-filter: blur(.1px);
+	box-shadow: -5px -5px 15px rgba(255,255,255,0.45), 5px 5px 15px rgba(255,255,255,0.45); 
 }
 
 .join-header {
 	text-align: center;
 	padding: 20px;
-	background: var(--dark-color-a);
+	background: transparent;
 	border-top-left-radius: .5rem;
 	border-top-right-radius: .5rem;
 }
 
 .join-main {
 	padding: 30px 40px;
-	background: var(--dark-color-b);
+	background: transparent;
 	border-bottom-left-radius: .5rem;
 	border-bottom-right-radius: .5rem;
 }
@@ -385,6 +387,9 @@ a {
 }
 
 @media (max-width: 980px) {
+	body {
+		background-attachment: fixed;
+	}
 	.chat-header {
 		width: 100vw;
 		position: fixed;
@@ -395,8 +400,10 @@ a {
 	.chat-container {
 		position: fixed;
 		top: 85px;
-		height: calc(100vh - 140px);
+		height: calc(100vh - 85px - 10%);
 		width: 100vw;
+		margin: unset;
+		border-radius: unset;
 	}
 
 	.chat-main {
@@ -413,6 +420,10 @@ a {
 		width: 30%;
 		margin-left: calc(30% - 100vw);
 		transition: all .3s;
+	}
+
+	.chat-messages {
+		height: 100%;
 	}
 
 	.toggle-sidebar {
