--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,7 +105,7 @@ a {
 
 .chat-main {
 	display: grid;
-	grid-template-columns: 1fr 3.5fr;
+	grid-template-columns: 1fr 3fr;
 	height: 80%;
 	width: 100%;
 }
@@ -171,6 +171,7 @@ a {
 	color: white;
 	transition : all .3s;
 	cursor: pointer;
+	z-index: 2000;
 }
 
 .toggle-sidebar:hover {
@@ -190,6 +191,9 @@ a {
 	background: rgba(0, 0, 0, 0.1);
 	padding: 10px;
 	margin-bottom: 20px;
+	overflow: hidden;
+	white-space: nowrap;
+	cursor: pointer;
 }
 
 .chat-sidebar h3 {
@@ -201,10 +205,11 @@ a {
 }
 
 .chat-messages {
-	padding: 25px;
+	padding: 0 25px;
 	height: 430px;
-	overflow-y: scroll;
+	overflow-y: auto;
 	background: transparent;
+	position: relative;
 }
 
 @keyframes gradient {
@@ -302,6 +307,27 @@ a {
 	margin-left: 0 !important;
 }
 
+.notify{  
+	position:sticky;
+	top: 0;
+	height: 0;
+	color:white;  
+	text-align:center;
+	background-color:rgba(0,0,0,.6);
+	overflow:hidden;
+	transition: all .3s;
+	margin-right: -25px;
+	margin-left: -25px;
+}
+
+.notify::before {
+	content: 'Copied to the Clipboard';
+}
+
+.active{  
+	height:max-content;
+	padding: 10px 0;
+}
 
 /* Join Page */
 .join-container {
@@ -420,6 +446,7 @@ a {
 		width: 30%;
 		margin-left: calc(30% - 100vw);
 		transition: all .3s;
+		z-index: 1000;
 	}
 
 	.chat-messages {
@@ -435,6 +462,12 @@ a {
 		bottom: 0;
 	}
 	
+	#emoji-content {
+		left: 5px;
+		top: unset;
+		bottom: 10vh;
+		z-index: 2000;
+	}
 }
 
 @media (max-width: 700px) {
