--- a/public/css/style.css
+++ b/public/css/style.css
@@ -133,8 +133,8 @@ a {
 	grid-auto-rows: 30px;
 	grid-auto-flow: row;
 	position: absolute;
-	left : 270px;
-	top: 410px;
+	left : 2%;
+	bottom: 12%;
 	display: none;
 	width: max-content;
 	padding: 10px;
@@ -363,10 +363,26 @@ a {
 
 .join-header {
 	text-align: center;
-	padding: 20px;
 	background: transparent;
 	border-top-left-radius: .5rem;
 	border-top-right-radius: .5rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.join-header > h1 {
+	text-shadow: 2px 2px 8px white;
+	text-transform: uppercase;
+}
+
+.join-header > i {
+	font-size: 1.5rem;
+}
+
+.join-header > * {
+	margin: 10px 5px;
+	padding: 10px 0;
 }
 
 .join-main {
@@ -381,24 +397,42 @@ a {
 	margin-bottom: 20px;
 }
 
-.join-main .form-control {
-	margin-bottom: 20px;
-}
-
 .join-main label {
 	display: block;
 	margin-bottom: 5px;
 }
 
+.join-main .form-control {
+	position: relative;
+}
+
 .join-main input[type='text'] {
 	padding: 15px;
-	height: 40px;
+	/* height: 40px; */
 	width: 100%;
 	font-size: 16px;
-	outline-width: 0;
-	border: none;
-	border-radius: 20px;
+	border: 1px solid #ccc;
+	transition: 0.4s;
+	box-sizing: border-box;
+	width: 100%;
 }
+
+.join-main input[type='text']:focus {
+	outline: none;
+}
+
+.join-main input[type='text'] ~ .focus-border:before,
+.join-main input[type='text'] ~ .focus-border:after{content: ""; position: absolute; top: 0; right: 0; width: 0; height: 3px; box-shadow: 0px 0px 15px 5px  white; background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); transition: 0.2s; transition-delay: 0.2s;}
+.join-main input[type='text'] ~ .focus-border:after{top: auto; bottom: 0; right: auto; left: 0; transition-delay: 0.6s;}
+.join-main input[type='text'] ~ .focus-border i:before,
+.join-main input[type='text'] ~ .focus-border i:after{content: ""; position: absolute; top: 0; left: 0; width: 3px; height: 0; box-shadow: 0px 0px 15px 5px  white; background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab); transition: 0.2s;}
+.join-main input[type='text'] ~ .focus-border i:after{left: auto; right: 0; top: auto; bottom: 0; transition-delay: 0.4s;}
+.join-main input[type='text']:focus ~ .focus-border:before,
+.join-main input[type='text']:focus ~ .focus-border:after{width: 100%; transition: 0.2s; transition-delay: 0.6s;}
+.join-main input[type='text']:focus ~ .focus-border:after{transition-delay: 0.2s;}
+.join-main input[type='text']:focus ~ .focus-border i:before,
+.join-main input[type='text']:focus ~ .focus-border i:after{height: 100%; transition: 0.2s;}
+.join-main input[type='text']:focus ~ .focus-border i:after{transition-delay: 0.4s;}
 
 .join-main select {
 	color: var(--slate-color);
